--- a/.gitmodules
+++ b/.gitmodules
@@ -6,5 +6,5 @@
 	url = https://github.com/Eelis/cxxdraft-htmlgen.git
 [submodule "gh-pages"]
 	path = gh-pages
-	url = https://github.com/timsong-cpp/draft.git
+	url = https://github.com/timsong-cpp/cppwp.git
 	branch = gh-pages
