--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,11 @@
 [submodule "draft"]
 	path = draft
 	url = https://github.com/cplusplus/draft.git
+        branch = master
 [submodule "cxxdraft-htmlgen"]
 	path = cxxdraft-htmlgen
 	url = https://github.com/Eelis/cxxdraft-htmlgen.git
+        branch = master
 [submodule "gh-pages"]
 	path = gh-pages
 	url = https://github.com/timsong-cpp/cppwp.git
