--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = gh-pages
 	url = https://github.com/timsong-cpp/cppwp.git
 	branch = gh-pages
+[submodule "networking-ts"]
+	path = networking-ts
+	url = https://github.com/cplusplus/networking-ts.git
