--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "networking-ts"]
 	path = networking-ts
 	url = https://github.com/cplusplus/networking-ts.git
+[submodule "ranges-ts"]
+	path = ranges-ts
+	url = https://github.com/ericniebler/stl2.git
