--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,11 @@
 [submodule "ranges-ts"]
 	path = ranges-ts
 	url = https://github.com/ericniebler/stl2.git
+[submodule "cxxdraft-htmlgen-networking"]
+	path = cxxdraft-htmlgen-networking
+	url = https://github.com/timsong-cpp/cxxdraft-htmlgen
+	branch = networking-ts
+[submodule "cxxdraft-htmlgen-ranges"]
+	path = cxxdraft-htmlgen-ranges
+	url = https://github.com/timsong-cpp/cxxdraft-htmlgen
+	branch = ranges-ts
