--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
         branch = master
 [submodule "gh-pages"]
 	path = gh-pages
-	url = https://github.com/timsong-cpp/cppwp.git
+	url = git@github.com:timsong-cpp/cppwp.git
 	branch = gh-pages
 [submodule "networking-ts"]
 	path = networking-ts
